# ChangeLog for kde-base/lisa
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/lisa/ChangeLog,v 1.65 2007/02/05 11:46:13 flameeyes Exp $

  05 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
  -files/lisa-3.5.0-bindnow.patch, -files/lisa, -files/lisa.conf,
  -files/reslisa, -files/reslisa.conf:
  Remove unneeded patches.

  04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> -lisa-3.5.2.ebuild:
  Remove old versions.

*lisa-3.5.6 (16 Jan 2007)

  16 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> +lisa-3.5.6.ebuild:
  Bump to 3.5.6 (prerelease).

  11 Dec 2006; <kloeri@gentoo.org> lisa-3.5.5.ebuild:
  Stable on ia64.

  06 Dec 2006; <kloeri@gentoo.org> lisa-3.5.5.ebuild:
  Stable on Alpha.

  01 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> lisa-3.5.2.ebuild,
  lisa-3.5.5.ebuild:
  Make support for hidden visibility explicit.

  30 Nov 2006; Markus Rothe <corsair@gentoo.org> lisa-3.5.5.ebuild:
  Stable on ppc64

  18 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> -lisa-3.5.3.ebuild,
  -lisa-3.5.3-r1.ebuild, -lisa-3.5.4.ebuild:
  Remove old versions.

  16 Nov 2006; Joseph Jezak <josejx@gentoo.org> lisa-3.5.5.ebuild:
  Marked ppc stable for bug #147570.

  14 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> lisa-3.5.5.ebuild:
  Stable on sparc wrt #147570

  13 Nov 2006; Danny van Dyk <kugelfang@gentoo.org> lisa-3.5.5.ebuild:
  Marked stable on amd64 wrt bug #147570.

  13 Nov 2006; Christian Faulhammer <opfer@gentoo.org> lisa-3.5.5.ebuild:
  "Stable x86, bug #147570"

*lisa-3.5.5 (03 Oct 2006)

  03 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> +lisa-3.5.5.ebuild:
  Bump to 3.5.5 (pre-release).

  17 Sep 2006; Carsten Lohrke <carlo@gentoo.org> -lisa-3.4.3.ebuild:
  Drop KDE 3.4.

  03 Sep 2006; Bryan Østergaard <kloeri@gentoo.org> lisa-3.5.2.ebuild:
  Stable on ia64.

*lisa-3.5.4 (25 Jul 2006)

  25 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> +lisa-3.5.4.ebuild:
  Bump to 3.5.4 (pre-release).
