@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/lisa
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/lisa/ChangeLog,v 1.65 2007/02/05 11:46:13 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/lisa/ChangeLog,v 1.66 2007/04/21 22:06:56 philantrop Exp $
+
+  21 Apr 2007; Wulf C. Krueger <philantrop@gentoo.org> lisa-3.5.5.ebuild,
+  lisa-3.5.6.ebuild:
+  Use newconfd instead of newins as per bug 174266.
 
   05 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
   -files/lisa-3.5.0-bindnow.patch, -files/lisa, -files/lisa.conf,
